# tinyrl

./: .gitignore  .gitmodules  BUILD.md  README.md  TODO.md  build.sh  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: conda.yml  pip.yml  python-package-conda.yml  workflows.yml
examples/: pendulum_sac.py  pendulum_sac_inference.py
examples/custom_environment/: README.MD  environment.h  train.py
examples/custom_environment/my_pendulum/: my_pendulum.h  operations_generic.h
examples/learning_curves/: analyze.py  environment.yml  evaluate_policy.py  run.sh  train.py
examples/learning_curves/ppo/: __init__.py  cleanrl.py  cleanrltrunc.py  sb3.py  sbx.py  tinyrl.py
examples/learning_curves/sac/: __init__.py  cleanrl.py  rltools.py  sb3.py  sbx.py  tinyrl.py
examples/learning_curves/td3/: cleanrl.py  sb3.py  sbx.py  tinyrl.py
examples/notebooks/: learning_curves.ipynb  train.ipynb
examples/pendulum/ppo/: inference.py  train.py
examples/pendulum/sac/: inference.py  train.py
examples/pendulum/td3/: inference.py  train.py
examples/pendulum_sac/: train.py
src/python_environment/: operations_cpu.h  python_environment.cpp  python_environment.h  sac.h
tests/: test_custom_environment.py  test_multi_interface.py  test_pendulum_sac.py  test_pytorch_import.py
tinyrl/: __init__.py  ppo.py  sac.py
tinyrl/interface/algorithms/ppo/: template.h
tinyrl/interface/algorithms/sac/: template.h
tinyrl/interface/algorithms/td3/: template.h
tinyrl/interface/inference/: inference.cpp
tinyrl/interface/python_environment/: operations_cpu.h  ppo.h  python_environment.cpp  python_environment.h  sac_default.h  sac_template.h
tinyrl/interface/training/: training.cpp
tinyrl/onnx/: __init__.py  load.py  render.py
tinyrl/src/: __init__.py  accelerate.py  compile.py  link_accelerate.py  link_blas.py  link_mkl.py  load_checkpoint.py  load_module.py  ppo.py  render.py  sac.py  td3.py  training.py  utils.py
tools/: README.md  act.sh  build_checkpoint.sh  list_whl_content.py
tools/docker/conda/: Dockerfile  docker_build.sh  docker_run.sh  entrypoint.sh
tools/docker/ubuntu/: Dockerfile  docker_build.sh  docker_run.sh  entrypoint.sh
