[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinyrl"
version = "0.3.1"
authors = [
  { name="Jonas Eschmann", email="jonas.eschmann@gmail.com" },
]
description = "A Python wrapper for RLtools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pybind11"
]

[project.optional-dependencies]
mkl = [
  "mkl",
  "mkl-include"
]
onnx = [
  "onnx"
]
tests = [
  "onnx",
  "torch"
]

[tool.hatch.build]
include = [
  "tinyrl/__init__.py",
  "tinyrl/interface/**",
  "tinyrl/src/**",
  "tinyrl/external/rl_tools/include/**"
]

[project.urls]
Homepage = "https://github.com/rl-tools/tinyrl"
Issues = "https://github.com/rl-tools/tinyrl/issues"
